# gcj

2016/io-women/: .gitignore  LICENSE  README.md  gcj2016io.cabal  io-women.cabal  stack.yaml
2016/io-women/src/: A.hs  B.hs  C.hs  D.hs
2016/qual/: .gitignore  README.md  gcj2016q.cabal  qual.cabal  stack.yaml
2016/qual/src/: A.hs  B.hs  C.hs  D.hs  GCJ.hs
2016/round-1a/: .gitignore  README.md  gcj2016r1a.cabal  round-1a.cabal  stack.yaml
2016/round-1a/src/: A.hs  B.hs  C.hs  D.hs
2016/round-1b/: .gitignore  README.md  gcj2016r1b.cabal  round-1b.cabal
2016/round-1b/src/: A.hs  B.hs  C.hs
2016/utils/: README.md  gcjutils.cabal  stack.yaml  utils.cabal
2016/utils/src/: GCJ.hs
2017/qual/: LICENSE  README.md  gcj2017-gcj-qual.cabal  qual.cabal  stack.yaml
2017/qual/src/: A.hs  B.hs  C.hs  D.hs
2017/round-1a/: README.md  gcj2017-gcj-r1a.cabal  round-1a.cabal  stack.yaml
2017/round-1a/src/: A.hs  B.hs
