name:                gcj2016io
version:             0.1.0.0
synopsis:            Google Code Jam 2016 I/O for Women
description:         Please see README.md
homepage:            https://github.com/instinctive/gcj2016io#readme
license:             BSD3
license-file:        LICENSE
author:              Charles Martin
maintainer:          charles.martin@gmail.com
copyright:           2015 Charles Martin
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable A
  hs-source-dirs:      src
  main-is:             A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gcjutils
                     , containers
