name:                gcj2016q
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/instinctive/gcj2016q#readme
license:             BSD3
license-file:        LICENSE
author:              Charles Martin
maintainer:          charles.martin@gmail.com
copyright:           2015 Charles Martin
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GCJ
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable A
  hs-source-dirs:      src
  main-is:             A.hs
  default-language:    Haskell2010
  other-modules:       GCJ
  build-depends:       base >= 4.7 && < 5

executable B
  hs-source-dirs:      src
  main-is:             B.hs
  default-language:    Haskell2010
  other-modules:       GCJ
  build-depends:       base >= 4.7 && < 5

executable C
  hs-source-dirs:      src
  main-is:             C.hs
  default-language:    Haskell2010
  other-modules:       GCJ
  build-depends:       base >= 4.7 && < 5
                     , containers

executable D
  hs-source-dirs:      src
  main-is:             D.hs
  default-language:    Haskell2010
  other-modules:       GCJ
  build-depends:       base >= 4.7 && < 5
