name:                qual
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable A
  hs-source-dirs:      src
  main-is:             A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable B
  hs-source-dirs:      src
  main-is:             B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable C
  hs-source-dirs:      src
  main-is:             C.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable D
  hs-source-dirs:      src
  main-is:             D.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
   , lens
   , linear
