name:                gcj2017-gcj-r1a
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/instinctive/gcj-2017-gcj-r1a#readme
license:             BSD3
license-file:        LICENSE
author:              Charles Martin
maintainer:          charles.martin@gmail.com
copyright:           Copyright: (c) 2017 Charles Martin
category:            development
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable A
  hs-source-dirs:      src
  main-is:             A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
   , lens
   , split

executable B
  hs-source-dirs:      src
  main-is:             B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
   , containers

executable C
  hs-source-dirs:      src
  main-is:             C.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
