name:                round-1a
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable A
  hs-source-dirs:      src
  main-is:             A.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
   , lens
   , split

executable B
  hs-source-dirs:      src
  main-is:             B.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
   , containers
